[gd_scene load_steps=15 format=3 uid="uid://cugilf582nt8v"]

[ext_resource type="Script" path="res://scripts/enemy_1.gd" id="1_t6wf2"]
[ext_resource type="Texture2D" uid="uid://sys72f4avvl6" path="res://art/PNG/Enemies/enemyWalking_1.png" id="1_tg50g"]
[ext_resource type="Shader" path="res://shaders/enemy_hurt.gdshader" id="2_kem54"]
[ext_resource type="Texture2D" uid="uid://bq0ipawftlr7h" path="res://art/PNG/Enemies/enemyWalking_2.png" id="2_m0b83"]
[ext_resource type="Texture2D" uid="uid://cvvqsarmtyq1r" path="res://art/PNG/Items/keyRed.png" id="5_b5r4e"]
[ext_resource type="Script" path="res://scripts/enemy_gun.gd" id="6_jgcww"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dv8sk"]
resource_local_to_scene = true
shader = ExtResource("2_kem54")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ibosj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tg50g")
}, {
"duration": 1.0,
"texture": ExtResource("2_m0b83")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ev5kp"]
radius = 16.0
height = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5ts4"]
size = Vector2(28.5, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qtcjp"]
size = Vector2(46, 46)

[sub_resource type="Animation" id="Animation_ovv2r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6rlbq"]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rc8pp"]
_data = {
"RESET": SubResource("Animation_ovv2r"),
"flash": SubResource("Animation_6rlbq")
}

[node name="enemy 1" type="CharacterBody2D" groups=["enemy"]]
collision_mask = 2
script = ExtResource("1_t6wf2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_dv8sk")
sprite_frames = SubResource("SpriteFrames_ibosj")

[node name="bodyCollision" type="CollisionShape2D" parent="." groups=["enemy"]]
visible = false
shape = SubResource("CapsuleShape2D_ev5kp")

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2(20, -22)
target_position = Vector2(0, 60)
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="."]
visible = false
position = Vector2(-20, -22)
target_position = Vector2(0, 60)
collision_mask = 2

[node name="obj_detector" type="Area2D" parent="." groups=["enemy"]]
visible = false

[node name="detector" type="CollisionShape2D" parent="obj_detector"]
position = Vector2(13.75, 0)
shape = SubResource("RectangleShape2D_l5ts4")
debug_color = Color(0.988235, 0, 0.301961, 0.419608)

[node name="Body" type="Area2D" parent="." groups=["enemy"]]
visible = false

[node name="bodyCollision" type="CollisionShape2D" parent="Body"]
shape = SubResource("RectangleShape2D_qtcjp")
debug_color = Color(0.984314, 0, 0.329412, 0.419608)

[node name="flash" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rc8pp")
}

[node name="gun" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, -32)
rotation = 0.785398
texture = ExtResource("5_b5r4e")
script = ExtResource("6_jgcww")

[node name="Marker2D" type="Marker2D" parent="gun"]
position = Vector2(-12.7279, 14.1421)

[connection signal="body_entered" from="obj_detector" to="." method="_on_obj_detector_body_entered"]
[connection signal="area_entered" from="Body" to="." method="_on_body_area_entered"]
[connection signal="body_entered" from="Body" to="." method="_on_body_body_entered"]
